# src/swagger/realTimeChannels.yaml
@@ -207,3 +207,103 @@ paths:
                   error:
                     type: string
                     example: "Error interno del servidor"
+  /clinic-notification/emergencies:
+    get:
+      summary: Obtener emergencias confirmadas en la clínica
+      description: Retorna una lista de emergencias con información del paciente si hay emergencias confirmadas.
+      operationId: getEmergencyFromDbClinic
+      responses:
+        "200":
+          description: Lista de emergencias confirmadas
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        emergencyId:
+                          type: string
+                          format: uuid
+                          example: "5580c7e3-29ba-4f9e-a0ec-5d10d9e28b0e"
+                        startDate:
+                          type: string
+                          format: date-time
+                          example: "2025-03-02T16:32:26.788Z"
+                        pickupDate:
+                          type: string
+                          format: date-time
+                          nullable: true
+                          example: "2025-01-01T02:00:00.000Z"
+                        deliveredDate:
+                          type: string
+                          format: date-time
+                          nullable: true
+                          example: null
+                        nihScale:
+                          type: integer
+                          nullable: true
+                          example: null
+                        status:
+                          type: string
+                          example: "CONFIRMED"
+                        patient:
+                          type: object
+                          properties:
+                            firstName:
+                              type: string
+                              example: "Carlos"
+                            lastName:
+                              type: string
+                              example: "Caceres"
+                            conditions:
+                              type: array
+                              items:
+                                type: string
+                              example: ["gripa"]
+                            age:
+                              type: integer
+                              example: 24
+                            height:
+                              type: number
+                              format: float
+                              example: 101
+                            weight:
+                              type: number
+                              format: float
+                              example: 74.5
+                            phoneNumber:
+                              type: string
+                              example: "3057479364"
+        "404":
+          description: No se encontraron emergencias confirmadas
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: true
+                  message:
+                    type: string
+                    example: "No se encontraron emergencias"
+        "500":
+          description: Error interno del servidor
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  success:
+                    type: boolean
+                    example: false
+                  data:
+                    type: string
+                    example: "Error obteniendo emergencia Error de conexión a la base de datos"
